--- a/clusters/development/portal.yaml
+++ b/clusters/development/portal.yaml
@@ -35,7 +35,7 @@ spec:
               fieldRef:
                 apiVersion: v1
                 fieldPath: status.podIP
-          image: ghcr.io/hm-edu/portal-backend/pki-rest-interface:main
+          image: ghcr.io/hm-edu/portal-backend/pki-rest-interface:main # {"$imagepolicy": "flux-system:pki-rest-interface-policy"}
           imagePullPolicy: Always
           name: app
           ports:
@@ -77,7 +77,7 @@ spec:
           env:
           - name: OTEL_EXPORTER_JAEGER_ENDPOINT
             value: http://jaeger-collector.istio-system.svc:14268/api/traces
-          image: ghcr.io/hm-edu/portal-backend/domain-rest-interface:main
+          image: ghcr.io/hm-edu/portal-backend/domain-rest-interface:main # {"$imagepolicy": "flux-system:domain-rest-interface-policy"}
           imagePullPolicy: Always
           name: app
           ports:
@@ -133,7 +133,7 @@ spec:
           env:
           - name: OTEL_EXPORTER_JAEGER_ENDPOINT
             value: http://jaeger-collector.istio-system.svc:14268/api/traces
-          image: ghcr.io/hm-edu/portal-backend/eab-rest-interface:main
+          image: ghcr.io/hm-edu/portal-backend/eab-rest-interface:main # {"$imagepolicy": "flux-system:eab-rest-interface-policy"}
           imagePullPolicy: Always
           name: app
           ports:
@@ -201,7 +201,7 @@ spec:
               secretKeyRef:
                 name: sectigo
                 key: sectigo_password
-          image: ghcr.io/hm-edu/portal-backend/pki-service:main
+          image: ghcr.io/hm-edu/portal-backend/pki-service:main # {"$imagepolicy": "flux-system:pki-service-policy"}
           imagePullPolicy: Always
           name: app
           ports:
