fix automation controller

--- a/clusters/development/flux-system-automation.yaml
+++ b/clusters/development/flux-system-automation.yaml
@@ -21,6 +21,6 @@ spec:
     kind: GitRepository
     name: flux-system
   update:
-    path: ./clusters/my-cluster
+    path: ./clusters/development
     strategy: Setters
 
