fix registry ref

--- a/clusters/development/frontend/portal-frontend-policy.yaml
+++ b/clusters/development/frontend/portal-frontend-policy.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: flux-system
 spec:
   imageRepositoryRef:
-    name: frontend-interface
+    name: frontend
   filterTags:
     ## use "pattern: '[a-f0-9]+-(?P<ts>[0-9]+)'" if you copied the workflow example using github.run_number
     pattern: '^main-[a-f0-9]+-(?P<ts>[0-9]+)'
