use acme params

--- a/clusters/development/portal.yaml
+++ b/clusters/development/portal.yaml
@@ -175,12 +175,6 @@ spec:
             - "fritterh"
             - --sectigo_customeruri
             - "DFN"
-            - --ssl_org_id
-            - "30032"
-            - --ssl_term
-            - "365"
-            - --ssl_profile
-            - "15863"
             - --smime_profile
             - "16307"
             - --smime_org_id
@@ -201,6 +195,16 @@ spec:
                 secretKeyRef:
                   name: sectigo
                   key: sectigo_password
+            - name: EAB_KID
+              valueFrom:
+                secretKeyRef:
+                  name: sectigo
+                  key: eab_kid
+            - name: EAB_HMAC
+              valueFrom:
+                secretKeyRef:
+                  name: sectigo
+                  key: eab_hmac
           image: ghcr.io/hm-edu/portal-backend/pki-service:main-b78316f-1655360348 # {"$imagepolicy": "flux-system:pki-service-policy"}
           imagePullPolicy: Always
           name: app
