--- a/clusters/development/frontend/kustomization.yaml
+++ b/clusters/development/frontend/kustomization.yaml
@@ -4,3 +4,4 @@ resources:
 - portal-frontend-image-registry.yaml
 - portal-frontend-policy.yaml
 - portal-frontend.yaml
+- portal-frontend-istio.yaml
