--- a/clusters/development/frontend/portal-frontend.yaml
+++ b/clusters/development/frontend/portal-frontend.yaml
@@ -20,3 +20,19 @@ spec:
           ports:
             - containerPort: 80
               protocol: TCP
+---
+apiVersion: v1
+kind: Service
+metadata:
+  labels:
+    app: frontend
+  name: frontend
+  namespace: portal
+spec:
+  selector:
+    app: frontend
+  type: ClusterIP
+  ports:
+  - name: http
+    port: 80
+    targetPort: 80
