--- a/clusters/development/backend/portal.yaml
+++ b/clusters/development/backend/portal.yaml
@@ -269,6 +269,9 @@ spec:
   - name: http
     port: 80
     targetPort: 8080
+  - name: grpc
+    port: 8081
+    targetPort: 8081
 ---
 apiVersion: v1
 kind: Service
