feat: add automatic upgrading of acme service

--- a/clusters/development/acme/acme.yaml
+++ b/clusters/development/acme/acme.yaml
@@ -85,7 +85,7 @@ spec:
         fsGroup: 1000
       serviceAccountName: portal-acme
       containers:
-        - image: ghcr.io/hm-edu/certificates:master
+        - image: ghcr.io/hm-edu/certificates:master # {"$imagepolicy": "flux-system:certificates"}
           imagePullPolicy: Always
           name: app
           command: [ "/usr/local/bin/step-ca" ]
