--- a/clusters/development/acme/kustomization.yaml
+++ b/clusters/development/acme/kustomization.yaml
@@ -1,5 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+- acme-image-registry.yaml
+- acme-policy.yaml
 - acme-accounts.yaml
 - acme.yaml
