--- a/clusters/development/frontend/kustomization.yaml
+++ b/clusters/development/frontend/kustomization.yaml
@@ -2,5 +2,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - portal-frontend-image-registry.yaml
-- portal-frontend-policy.yaml
+- portal-frontend-image-policy.yaml
 - portal-frontend.yaml
