--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -17,6 +17,7 @@ jobs:
         id: update
         run: |
           flux install \
+            --components-extra=image-reflector-controller,image-automation-controller \
             --export > ./clusters/development/flux-system/gotk-components.yaml
 
           VERSION="$(flux -v)"
