--- a/clusters/development/kured.yaml
+++ b/clusters/development/kured.yaml
@@ -2,11 +2,11 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: charts
+  name: istio
   namespace: flux-system
 spec:
   interval: 10m
-  path: ./core/charts
+  path: ./core/kured
   prune: true
   sourceRef:
     kind: GitRepository
