--- a/core/istio/helm.yaml
+++ b/core/istio/helm.yaml
@@ -46,6 +46,8 @@ spec:
   upgrade:
     remediation:
       retries: 5
+  values:
+    replicaCount: 2
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
