--- a/core/istio/helm.yaml
+++ b/core/istio/helm.yaml
@@ -48,6 +48,7 @@ spec:
       retries: 5
   values:
     pilot:
+      autoscaleEnabled: false
       replicaCount: 2
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
