--- a/clusters/production/charts.yaml
+++ b/clusters/production/charts.yaml
@@ -15,7 +15,7 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: charts
+  name: system-upgrade
   namespace: flux-system
 spec:
   interval: 10m
