--- a/core/system-upgrade/source.yaml
+++ b/core/system-upgrade/source.yaml
@@ -8,6 +8,7 @@ apiVersion: source.toolkit.fluxcd.io/v1beta1
 kind: GitRepository
 metadata:
   name: system-upgrade-controller
+  namespace: flux-system
 spec:
   interval: 24h
   url: https://github.com/rancher/system-upgrade-controller
