fix update interval

--- a/clusters/production/system-upgrade-plans.yml
+++ b/clusters/production/system-upgrade-plans.yml
@@ -5,7 +5,7 @@ metadata:
   name: system-upgrade-plans
   namespace: system-upgrade
 spec:
-  interval: 10ms
+  interval: 10m
   dependsOn:
   - name: system-upgrade-controller
   path: ./core/system-upgrade-plans
