--- a/core/system-upgrade/source.yaml
+++ b/core/system-upgrade/source.yaml
@@ -13,6 +13,7 @@ spec:
   interval: 24h
   url: https://github.com/rancher/system-upgrade-controller
   ref:
+    # renovate: datasource=github-releases depName=rancher/system-upgrade-controller
     tag: v0.9.1
   ignore: |
     # exclude all
