Add short readme and group istio stuff

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -81,6 +81,21 @@
         "patch"
       ]
     },
+    // group istio dependencies
+    {
+      "description": "Group Istio Charts",
+      "groupName": "Istio",
+      "matchDatasources": [
+        "helm"
+      ],
+      "matchPaths": [
+        "core/istio/helm.yaml"
+      ],
+      "group": {
+        "commitMessageTopic": "{{{groupName}}} group"
+      },
+      "separateMinorPatch": true
+    },
     // add labels according to package and update types
     {
       "matchDatasources": [
