--- a/core/istio/helm.yaml
+++ b/core/istio/helm.yaml
@@ -47,6 +47,8 @@ spec:
     remediation:
       retries: 5
   values:
+    global:
+      logAsJson: true
     meshConfig:
       accessLogFile: /dev/stdout
       accessLogEncoding: JSON
