--- a/clusters/development/istio.yaml
+++ b/clusters/development/istio.yaml
@@ -1,13 +1,5 @@
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
-metadata:
-  name: istio
-  namespace: flux-system
-spec:
-  interval: 10m
-  path: ./core/istio
-  prune: true
-  sourceRef:
-    kind: GitRepository
-    name: flux-system
+resources:
+  - ../../core/istio/helm.yaml
