--- a/core/istio/kustomization.yaml
+++ b/core/istio/kustomization.yaml
@@ -1,6 +1,8 @@
----
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+metadata:
+  name: istio
+  namespace: flux-system
 resources:
   - namespace.yaml
   - helm.yaml
