--- a/clusters/production/istio-base/kustomization.yaml
+++ b/clusters/production/istio-base/kustomization.yaml
@@ -1,4 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ../../../core/istio/helm.yaml
+  - ../../../core/istio
+patchesStrategicMerge:
+  - gateways.yaml
