--- a/core/istio/helm.yaml
+++ b/core/istio/helm.yaml
@@ -90,7 +90,7 @@ spec:
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: ingressgateway-secondary
+  name: ingressgateway-acme
   namespace: istio-ingress
 spec:
   interval: 15m
