--- a/clusters/production/frontend/portal-frontend.yaml
+++ b/clusters/production/frontend/portal-frontend.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: portal
-  annotations:
+  labels:
     istio-injection: enabled
 ---
 apiVersion: apps/v1
