--- a/clusters/production/acme/acme.yaml
+++ b/clusters/production/acme/acme.yaml
@@ -70,6 +70,8 @@ metadata:
   namespace: portal
 spec:
   replicas: 1
+  strategy:
+    type: Recreate
   selector:
     matchLabels:
       app: certificates
