istio: Try to preserve load client ip

--- a/clusters/production/istio-base/gateways.yaml
+++ b/clusters/production/istio-base/gateways.yaml
@@ -5,9 +5,11 @@ metadata:
   namespace: istio-ingress
 spec:
   values:
+    kind: DaemonSet
     podAnnotations: 
       "proxy.istio.io/config": '{"gatewayTopology" : { "numTrustedProxies": 1 } }'
     service:
+      externalTrafficPolicy: Local
       type: NodePort
       ports:
         - name: http2
@@ -26,9 +28,11 @@ metadata:
   namespace: istio-ingress
 spec:
   values:
+    kind: DaemonSet
     podAnnotations: 
       "proxy.istio.io/config": '{"gatewayTopology" : { "numTrustedProxies": 1 } }'
     service:
+      externalTrafficPolicy: Local
       type: NodePort
       ports:
         - name: http2
