--- a/core/istio/helm.yaml
+++ b/core/istio/helm.yaml
@@ -77,6 +77,7 @@ spec:
     remediation:
       retries: 5
   upgrade:
+    force: true
     remediation:
       retries: 5
 
@@ -102,5 +103,6 @@ spec:
     remediation:
       retries: 5
   upgrade:
+    force: true
     remediation:
       retries: 5
