--- a/clusters/development/istio-base/gateways.yaml
+++ b/clusters/development/istio-base/gateways.yaml
@@ -15,7 +15,7 @@ spec:
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: ingressgateway-acme
+  name: ingressgateway-internal
   namespace: istio-ingress
 spec:
   values:
