--- a/clusters/production/istio-base/gateways.yaml
+++ b/clusters/production/istio-base/gateways.yaml
@@ -24,7 +24,7 @@ spec:
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: ingressgateway-acme
+  name: ingressgateway-internal
   namespace: istio-ingress
 spec:
   values:
