--- a/clusters/production/istio/istio-gateway.yaml
+++ b/clusters/production/istio/istio-gateway.yaml
@@ -18,7 +18,23 @@ spec:
     - "domain.api.hm.edu"
     - "pki.api.hm.edu"
     - "eab.api.hm.edu"
-    
+
+  - port: 
+      number: 80
+      name: http-acme
+      protocol: HTTP
+    tls:
+      httpsRedirect: true
+    hosts:
+    - acme.hmtest.de
+  - port:
+      number: 443
+      name: https-acme
+      protocol: HTTPS
+    tls:
+      mode: PASSTHROUGH
+    hosts:
+    - acme.hmtest.de
   - port:
       number: 443
       name: https
@@ -31,29 +47,3 @@ spec:
     - "domain.api.hm.edu"
     - "pki.api.hm.edu"
     - "eab.api.hm.edu"
----
-apiVersion: networking.istio.io/v1alpha3
-kind: Gateway
-metadata:
-  name: gateway-acme
-  namespace: istio-ingress
-spec:
-  selector:
-    istio: ingressgateway-acme # use istio default ingress gateway
-  servers:
-  - port: 
-      number: 80
-      name: http
-      protocol: HTTP
-    tls:
-      httpsRedirect: true
-    hosts:
-    - acme.hm.edu
-  - port:
-      number: 443
-      name: https
-      protocol: HTTPS
-    tls:
-      mode: PASSTHROUGH
-    hosts:
-    - acme.hm.edu
