--- a/core/istio/helm.yaml
+++ b/core/istio/helm.yaml
@@ -85,7 +85,7 @@ spec:
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: ingressgateway-acme
+  name: ingressgateway-internal
   namespace: istio-ingress
 spec:
   interval: 15m
