--- a/clusters/production/istio/istio-gateway.yaml
+++ b/clusters/production/istio/istio-gateway.yaml
@@ -7,43 +7,42 @@ spec:
   selector:
     istio: ingressgateway
   servers:
-  - port: 
-      number: 80
-      name: http
-      protocol: HTTP
-    tls:
-      httpsRedirect: true
-    hosts:
-    - "my.hm.edu"
-    - "domain.api.hm.edu"
-    - "pki.api.hm.edu"
-    - "eab.api.hm.edu"
-
-  - port: 
-      number: 80
-      name: http-acme
-      protocol: HTTP
-    tls:
-      httpsRedirect: true
-    hosts:
-    - acme.hmtest.de
-  - port:
-      number: 443
-      name: https-acme
-      protocol: HTTPS
-    tls:
-      mode: PASSTHROUGH
-    hosts:
-    - acme.hmtest.de
-  - port:
-      number: 443
-      name: https
-      protocol: HTTPS
-    tls:
-      mode: SIMPLE
-      credentialName: portal-cert
-    hosts:
-    - "my.hm.edu"
-    - "domain.api.hm.edu"
-    - "pki.api.hm.edu"
-    - "eab.api.hm.edu"
+    - port:
+        number: 80
+        name: http
+        protocol: HTTP
+      tls:
+        httpsRedirect: true
+      hosts:
+        - "my.hm.edu"
+        - "domain.api.hm.edu"
+        - "pki.api.hm.edu"
+        - "eab.api.hm.edu"
+    - port:
+        number: 80
+        name: http-acme
+        protocol: HTTP
+      tls:
+        httpsRedirect: true
+      hosts:
+        - acme.hm.edu
+    - port:
+        number: 443
+        name: https-acme
+        protocol: HTTPS
+      tls:
+        mode: PASSTHROUGH
+      hosts:
+        - acme.hm.edu
+    - port:
+        number: 443
+        name: https
+        protocol: HTTPS
+      tls:
+        mode: SIMPLE
+        credentialName: portal-cert
+      hosts:
+        - "my.hm.edu"
+        - "domain.api.hm.edu"
+        - "pki.api.hm.edu"
+        - "eab.api.hm.edu"
