--- a/clusters/production/minio/helm.yaml
+++ b/clusters/production/minio/helm.yaml
@@ -8,11 +8,11 @@ spec:
   interval: 15m
   chart:
     spec:
-      chart: longhorn
-      version: 1.2.5
+      chart: minio
+      version: 3.7.3
       sourceRef:
         kind: HelmRepository
-        name: longhorn
+        name: minio
         namespace: flux-system
       interval: 15m
   install:
