--- a/clusters/production/minio/helm.yaml
+++ b/clusters/production/minio/helm.yaml
@@ -22,6 +22,14 @@ spec:
   upgrade:
     remediation:
       retries: 5
+  values:
+    replicas: 4
+    persistence:
+      enabled: true
+      size: 10Gi
+    buckets:
+      - name: thanos
+      - name: loki
   valuesFrom:
     - kind: Secret
       name: minio-values
