--- a/clusters/production/minio/helm.yaml
+++ b/clusters/production/minio/helm.yaml
@@ -23,6 +23,13 @@ spec:
     remediation:
       retries: 5
   values:
+    resources:
+      requests:
+        cpu: 1
+        memory: 2G
+      limits:
+        cpu: 2
+        memory: 4G
     replicas: 4
     persistence:
       enabled: true
