--- a/clusters/production/kustomization.yaml
+++ b/clusters/production/kustomization.yaml
@@ -5,8 +5,6 @@ resources:
   - istio-base
   - istio
   - flux-system
-  - frontend
-  - backend
-  - acme
   - minio.yaml
+  - apps.yaml
   - flux-system-automation.yaml
