--- a/clusters/production/portal/acme/acme.yaml
+++ b/clusters/production/portal/acme/acme.yaml
@@ -10,7 +10,7 @@ spec:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 5Gi
+      storage: 500Mi
 ---
 apiVersion: v1
 kind: ConfigMap
@@ -131,11 +131,11 @@ metadata:
 spec:
   type: ClusterIP
   ports:
-  - name: acme
-    port: 443
-    targetPort: 443
-  - name: internal
-    port: 8443
-    targetPort: 8443
+    - name: acme
+      port: 443
+      targetPort: 443
+    - name: internal
+      port: 8443
+      targetPort: 8443
   selector:
     app: certificates
