loki: try to wire up connection to minio

--- a/clusters/production/monitoring/loki/kustomization.yaml
+++ b/clusters/production/monitoring/loki/kustomization.yaml
@@ -3,3 +3,9 @@ kind: Kustomization
 resources:
   - namespace.yaml
   - helm.yaml
+secretGenerator:
+  - name: minio-values
+    files:
+      - values.yaml=values.enc.yaml
+configurations:
+  - kustomizeconfig.yaml
