--- a/clusters/production/monitoring/loki/helm.yaml
+++ b/clusters/production/monitoring/loki/helm.yaml
@@ -15,8 +15,6 @@ spec:
         name: grafana-charts
         namespace: flux-system
       interval: 10m
-  test:
-    enable: false # Enable helm test
   install:
     remediation: # perform remediation when helm install fails
       retries: 3
@@ -25,6 +23,7 @@ spec:
       retries: 3
       remediateLastFailure: true # remediate the last failure, when no retries remain
     cleanupOnFail: true
+    crds: CreateReplace
   rollback:
     timeout: 10m
     recreate: true
@@ -32,6 +31,34 @@ spec:
   values:
     loki:
       enabled: true
+      config:
+        compactor:
+          shared_store: s3
+          working_directory: /data/loki/boltdb-shipper-compactor
+        schema_config:
+          configs:
+            - from: "2020-10-24"
+              index:
+                period: 24h
+                prefix: index_
+              object_store: aws
+              schema: v11
+              store: boltdb-shipper
+        table_manager:
+          retention_deletes_enabled: true
+          # Customize this: how long should logs be kept?
+          retention_period: 2w
+        storage_config:
+          boltdb_shipper:
+            active_index_directory: /data/loki/boltdb-shipper-active
+            cache_location: /data/loki/boltdb-shipper-cache
+            cache_ttl: 24h
+            shared_store: s3
+          aws:
+            bucketnames: loki
+            endpoint: minio.minio:9000
+            s3forcepathstyle: true
+            insecure: true
       serviceMonitor:
         enabled: false
     promtail:
