--- a/clusters/production/monitoring/kustomization.yaml
+++ b/clusters/production/monitoring/kustomization.yaml
@@ -2,3 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - loki
+  - vector
+  - kube-prometheus-stack
+  - grafana
+  - thanos
