--- a/clusters/production/monitoring/loki/helm.yaml
+++ b/clusters/production/monitoring/loki/helm.yaml
@@ -29,6 +29,10 @@ spec:
     recreate: true
     cleanupOnFail: true
   values:
+    global:
+      clusterDomain: cluster.local
+      dnsNamespace: kube-system
+      dnsService: rke2-coredns-rke2-coredns
     loki:
       structuredConfig:
         auth_enabled: false
