--- a/core/cert-manager/helm.yaml
+++ b/core/cert-manager/helm.yaml
@@ -9,7 +9,7 @@ spec:
   chart:
     spec:
       chart: cert-manager
-      version: 1.9.1
+      version: 1.10.1
       sourceRef:
         kind: HelmRepository
         name: jetstack
@@ -20,6 +20,7 @@ spec:
     remediation:
       retries: 5
   upgrade:
+    crds: CreateReplace
     remediation:
       retries: 5
   values:
