--- a/clusters/production/minio/helm.yaml
+++ b/clusters/production/minio/helm.yaml
@@ -34,6 +34,9 @@ spec:
     persistence:
       enabled: true
       size: 10Gi
+    metrics:
+      serviceMonitor:
+        enabled: true
     buckets:
       - name: thanos
         policy: none
