--- a/clusters/production/monitoring/vector/aggregator/helm.yaml
+++ b/clusters/production/monitoring/vector/aggregator/helm.yaml
@@ -52,15 +52,26 @@ spec:
             # Standardize 'app' index
             .custom_app_name = .pod_labels."app.kubernetes.io/name" || .pod_labels.app || .pod_labels."k8s-app" || "unknown"
             
-        kubernetes_logs_remap_json:
-          type: remap
+        kubernetes_logs_portal:
+          type: filter
           inputs:
             - kubernetes_logs_remap
+          condition: kubernetes.pod_namespace == "portal"
+        kubernetes_logs_portal_remap:
+          type: remap
           drop_on_error: true
           reroute_dropped: true
+          inputs:
+            - kubernetes_logs_portal
           source: |
-            # Standardize 'app' index
-            . = parse_json!(.message)  
+            # Try to extract JSON Message
+            . = parse_json!(.message)
+          
+        kubernetes_logs_other:
+          type: filter
+          inputs:
+            - kubernetes_logs_remap
+          condition: kubernetes.pod_namespace != "portal"
       sinks:
         loki_journal:
           type: loki
@@ -80,8 +91,9 @@ spec:
         loki_kubernetes:
           type: loki
           inputs:
-            - kubernetes_logs_remap_json
-            - kubernetes_logs_remap_json.dropped
+            - kubernetes_logs_portal_remap
+            - kubernetes_logs_portal_remap.dropped
+            - kubernetes_logs_other
           endpoint: http://loki-gateway:80
           encoding:
             codec: json
