--- a/clusters/production/portal/acme/acme.yaml
+++ b/clusters/production/portal/acme/acme.yaml
@@ -109,7 +109,7 @@ spec:
               name: cert-config
           env:
             - name: OTEL_EXPORTER_JAEGER_ENDPOINT
-              value: http://jaeger-collector.istio-system.svc:14268/api/traces
+              value: http://tempo-tempo-distributed-distributor.monitoring:14268/api/traces
       volumes:
         - name: cert-config
           configMap:
