enable tempo search

--- a/clusters/production/monitoring/tempo/helm.yaml
+++ b/clusters/production/monitoring/tempo/helm.yaml
@@ -28,6 +28,9 @@ spec:
     recreate: true
     cleanupOnFail: true
   values:
+    search:
+      # -- Enable Tempo search
+      enabled: true
     traces:
       otlp:
         grpc:
