--- a/clusters/production/monitoring/flux/git.yaml
+++ b/clusters/production/monitoring/flux/git.yaml
@@ -7,8 +7,8 @@ spec:
   interval: 24h
   url: https://github.com/fluxcd/flux2
   ref:
-    # renovate: datasource=github-releases depName=rancher/system-upgrade-controller
-    tag: v0.9.1
+    # renovate: datasource=github-releases depName=fluxcd/flux2
+    tag: v0.35.0
   ignore: |
     # exclude all
     /*
