--- a/clusters/production/istio/istio-policies.yaml
+++ b/clusters/production/istio/istio-policies.yaml
@@ -15,18 +15,29 @@ spec:
           - "cluster.local/ns/portal/sa/portal-acme"
     to:
     - operation:
-        paths: ["/pkiService.SSLService/ListCertificates", "/pkiService.SSLService/IssueCertificate"]
+        paths: 
+        - "/pkiService.SSLService/ListCertificates"
+        - "/pkiService.SSLService/IssueCertificate"
   - from:
     - source:
         principals:
           - "cluster.local/ns/portal/sa/portal-pki-rest"
     to:
     - operation:
-        paths: ["/pkiService.SSLService/ListCertificates", "/pkiService.SSLService/CertificateDetails", "/pkiService.SSLService/IssueCertificate", "/pkiService.SSLService/RevokeCertificate", "/pkiService.SmimeService/ListCertificates", "/pkiService.SmimeService/IssueCertificate", "/pkiService.SmimeService/RevokeCertificate"]
+        paths: 
+        - "/pkiService.SSLService/ListCertificates"
+        - "/pkiService.SSLService/CertificateDetails"
+        - "/pkiService.SSLService/IssueCertificate"
+        - "/pkiService.SSLService/RevokeCertificate"
+        - "/pkiService.SmimeService/ListCertificates"
+        - "/pkiService.SmimeService/IssueCertificate"
+        - "/pkiService.SmimeService/RevokeCertificate"
   - from:
     - source:
         principals:
           - "cluster.local/ns/portal/sa/portal-domain"
     to:
     - operation:
-        paths: ["/pkiService.SSLService/ListCertificates", "/pkiService.SSLService/RevokeCertificate" ]
+        paths: 
+         - "/pkiService.SSLService/ListCertificates"
+         - "/pkiService.SSLService/RevokeCertificate"
