--- a/clusters/production/istio/istio-filters.yaml
+++ b/clusters/production/istio/istio-filters.yaml
@@ -19,7 +19,7 @@ spec:
 apiVersion: networking.istio.io/v1alpha3
 kind: EnvoyFilter
 metadata:
-  name: proxy-protocol
+  name: proxy-protocol-internal
   namespace: istio-ingress
 spec:
   configPatches:
